apps/base/demo-2/whereami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-2
  labels:
    bravo-team-shared-gateway-access: "true"
