apps/base/demo-2/whereami/external-multi-cluster-http.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: bravo-team-external-http
  namespace: team-bravo-tenant
  # namespace: demo-2
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      # namespaces:
      #   from: Selector
      #   selector:
      #     matchLabels:
      #       bravo-team-shared-gateway-access: "true"
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: bravo-tenant-cert
  addresses:
    - type: NamedAddress
      value: team-bravo-tenant-api
