apps/base/demo-2/whereami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: demo-2-route
  namespace: demo-2
  labels:
    gateway: external-http
    bravo-team-shared-gateway-access: "true"

spec:
  hostnames:
  - "team-bravo.endpoints.anz-next-demo-23.cloud.goog"
  parentRefs:
  - name: bravo-team-external-http
    namespace: team-bravo-tenant
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: whereami
      port: 80
